Implement car model dynamic property CRUD
